# propicks-framework

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  WIKI.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.streamlit/: secrets.toml.example
data/ai_cache/: NEM_2026-04-15.json  NEM_v2_2026-04-15.json
docs/: ABLATION_B1_CROSS_SECTIONAL.md  ABLATION_B2_EARNINGS_REVISION.md  ABLATION_B4_QUALITY.md  ABLATION_B6_CUMULATIVE.md  ABLATION_C_CUMULATIVE.md  ARCHITECTURE_OVERVIEW.md  BACKTEST_GUIDE.md  BASELINE_COMPARISON.md  CALENDAR.md  CLI_REFERENCE.md  CONTRARIAN_STRATEGY.md  CONTRIBUTING_AND_TESTING.md  DASHBOARD_GUIDE.md  DATA_DICTIONARY.md  DECAY_MONITOR.md  ETF_ROTATION_STRATEGY.md  FAQ_AND_TROUBLESHOOTING.md  INSTALLATION_AND_SETUP.md  MACRO_OVERLAY.md  MOMENTUM_STRATEGY.md  MULTIPERIOD_STABILITY.md  NEXT_STEPS.md  OPERATIONAL_WORKFLOWS.md  PINE_SCRIPTS_REFERENCE.md  PNL_ATTRIBUTION.md  REGIME_COMPOSITE.md  REVALIDATION_BROAD_UNIVERSE.md  RISK_FRAMEWORK.md  SCENARIO_REPLAY.md  SCHEDULER.md  SECURITY_AND_SECRETS.md  SIGNAL_ROADMAP.md  STORAGE.md  STRESS_VALIDATION.md  SURVIVORSHIP_BIAS_ANALYSIS.md  TELEGRAM_BOT.md  THRESHOLD_CALIBRATION.md  Trading_System_Playbook.md  USER_GUIDE.md  WATCHLIST_AND_TRADE_MGMT.md  (+1 more)
prompts/: PROMPTS_CLAUDE_CODE_AND_REVIEW.md
scripts/: ablation_b1_cross_sectional.py  ablation_b2_earnings_revision.py  ablation_b4_quality.py  ablation_b6_cumulative.py  ablation_c_cumulative.py  analyze_ai_verdicts.py  backup_db.sh  baseline_backtest.py  import_sp500_history.py  multiperiod_stability.py  quantify_survivorship_bias.py  scenario_replay.py  test_decay_monitor.py  test_macro_overlay.py  test_regime_daily.py
src/propicks/: config.py
src/propicks/ai/: __init__.py  budget.py  claude_client.py  contrarian_prompts.py  contrarian_validator.py  etf_prompts.py  etf_validator.py  prompts.py  thesis_validator.py  user_prompts.py
src/propicks/backtest/: __init__.py  calibration.py  costs.py  cpcv.py  engine.py  metrics.py  metrics_v2.py  portfolio_engine.py  walkforward.py
src/propicks/cli/: backtest.py  bot.py  cache.py  calendar.py  calibrate.py  contrarian.py  journal.py  momentum.py  portfolio.py  report.py  rotate.py  scanner.py  scheduler.py  watchlist.py
src/propicks/dashboard/: __init__.py  _bootstrap.py  _shared.py  app.py  cadence.py  launcher.py
src/propicks/domain/: attribution.py  bootstrap.py  breadth.py  calendar.py  calibration_stats.py  contrarian_discovery.py  contrarian_scoring.py  decay_monitor.py  earnings_revision.py  etf_scoring.py  etf_universe.py  exposure.py  indicators.py  macro_overlay.py  momentum_discovery.py  permutation_test.py  quality.py  regime.py  (+11 more)
tests/: conftest.py
tests/unit/: test_attribution.py  test_backtest.py  test_backtest_v2.py  test_budget.py  test_calendar.py  test_contrarian_discovery.py  test_contrarian_scoring.py  test_earnings_gate.py  test_etf_scoring.py  test_etf_universe.py  test_exposure.py  test_index_constituents.py  test_indicators.py  test_logging.py  test_market_cache.py  test_migrations.py  test_momentum_discovery.py  test_notifications_commands.py  test_notifications_dispatcher.py  test_notifications_formatter.py  test_portfolio_contrarian.py  test_regime.py  test_risk.py  test_scheduler_alerts.py  test_scheduler_jobs.py  test_scoring.py  test_sizing.py  test_sizing_v2.py  test_stock_rs.py  test_thesis_validator.py  test_trade_mgmt.py  test_trade_sync.py  test_verdict.py  test_watchlist_store.py
tradingview/: contrarian_signal_engine.pine  daily_regime_composite.pine  daily_signal_engine.pine  etf_rotation_engine.pine  weekly_regime_engine.pine
(+46 files in other folders)
