[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "propicks"
version = "0.1.0"
description = "Trading engine AI-driven: scoring tecnico, sizing, journal, report"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Valerio Uberti" }]
license = { text = "Proprietary" }
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.0",
    "numpy>=1.24",
    "tabulate>=0.9",
    "anthropic>=0.40",
    "pydantic>=2.5",
    "python-dotenv>=1.0",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
]
dashboard = [
    "streamlit>=1.31",
    "plotly>=5.18",
    "watchdog"
]
telegram = [
    "python-telegram-bot>=20.0",
]

[project.scripts]
propicks-scan      = "propicks.cli.scanner:main"
propicks-contra    = "propicks.cli.contrarian:main"
propicks-portfolio = "propicks.cli.portfolio:main"
propicks-journal   = "propicks.cli.journal:main"
propicks-report    = "propicks.cli.report:main"
propicks-rotate    = "propicks.cli.rotate:main"
propicks-backtest  = "propicks.cli.backtest:main"
propicks-watchlist = "propicks.cli.watchlist:main"
propicks-dashboard = "propicks.dashboard.launcher:main"
propicks-migrate   = "propicks.scripts.migrate_json_to_sqlite:main"
propicks-cache     = "propicks.cli.cache:main"
propicks-scheduler = "propicks.cli.scheduler:main"
propicks-bot       = "propicks.cli.bot:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
# E501 = line too long (handled by editor/formatter, not a correctness issue)
# RUF001/002/003 = ambiguous unicode characters — false positive on Italian
#   docstrings and comments (à, è, ì, ò, ù are legitimate letters, not
#   look-alikes). The codebase is bilingual by design.
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
